# deadfinder

./: pyproject.toml
deadfinder/: README.md  analyzer.py  cli.py  pyproject.toml
deadfinder/deadfinder/: reporter.py
deadfinder/parsers/: __init__.py  js_parser.py  python_parser.py
tests/: test_analyzer.py
tests/fixtures/: sample.js  sample.py
