[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deadfinder"
version = "0.1.0"
description = "Find dead code in Python, JavaScript, and TypeScript projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["dead-code", "static-analysis", "linter", "python", "javascript", "typescript"]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.scripts]
deadfinder = "deadfinder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deadfinder*"]
